--- a/ideia aplicativo jogo/projeto/app/src/main/res/layout/activity_main.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/teste" />-->
+
+    <pl.droidsonroids.gif.GifImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/danca_de_rua"
+        android:background="#fff"
+        />
+
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/teste" />
+        android:fontFamily="@font/indieflower"
+        android:textFontWeight="bold"
+        android:layout_marginLeft="120dp"
+        android:textSize="35dp"
+        android:text="@string/app_name"
+        android:textAlignment="center"
+        />
 
 </RelativeLayout>
