--- a/ideia aplicativo jogo/projeto/app/src/main/res/menu/activity_menu_drawer.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/menu/activity_menu_drawer.xml
@@ -5,34 +5,26 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:id="@+id/nav_home"
+            android:icon="@drawable/home"
+            android:title="@string/menu_home" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:id="@+id/nav_consultar"
+            android:icon="@drawable/ic_book_black_24dp"
+            android:title="@string/menu_see" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:id="@+id/nav_regras"
+            android:icon="@drawable/regras"
+            android:title="@string/menu_rules" />
         <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
-    </group>
+            android:id="@+id/nav_sobre"
+            android:icon="@drawable/jogo"
+            android:title="@string/menu_sobre" />
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
+        <item
+            android:id="@+id/nav_sair"
+            android:icon="@drawable/fechar"
+            android:title="@string/menu_sair" />
+    </group>
 
 </menu>
