--- a/ideia aplicativo jogo/projeto/app/src/main/res/layout/nav_header_menu.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/layout/nav_header_menu.xml
@@ -24,13 +24,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="@string/nav_header_title"
+        android:text="@string/app_name"
+        android:textFontWeight="bolder"
+        android:textColor="#fff"
+        android:fontFamily="@font/looneytunes"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"/>
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
+        android:textFontWeight="bolder"
         android:layout_height="wrap_content"
-        android:text="@string/nav_header_subtitle" />
+        android:fontFamily="@font/looneytunes"
+        android:textColor="#fff"
+        android:text="@string/menu" />
 
 </LinearLayout>
