--- a/ideia aplicativo jogo/projeto/app/src/main/res/layout/activity_main.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/layout/activity_main.xml
@@ -22,9 +22,11 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/indieflower"
+        android:fontFamily="@font/looneytunes"
         android:textFontWeight="bold"
-        android:layout_marginLeft="120dp"
+        android:layout_marginTop="50dp"
+        android:textColor="#000"
+        android:layout_marginLeft="55dp"
         android:textSize="35dp"
         android:text="@string/app_name"
         android:textAlignment="center"
