--- a/ideia aplicativo jogo/projeto/app/src/main/res/layout/app_bar_menu.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/layout/app_bar_menu.xml
@@ -6,8 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".MenuActivity">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
+        android:id="@+id/actionBar"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
@@ -20,14 +25,14 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_menu" />
+    <!--<include layout="@layout/content_menu" />-->
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+    <FrameLayout
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/actionBar" />
+
+    </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
