--- a/ideia aplicativo jogo/projeto/app/src/main/res/drawable/button_play.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/drawable/button_play.xml
@@ -23,6 +23,6 @@
         />
     <stroke
         android:width="3dp"
-        android:color="#C4C4C4"
+        android:color="#c4c4c4"
         />
 </shape>
