--- a/ideia aplicativo jogo/projeto/app/src/main/res/layout/activity_main.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="@string/teste" />-->
-
     <pl.droidsonroids.gif.GifImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,13 +15,13 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/looneytunes"
         android:textFontWeight="bold"
         android:layout_marginTop="50dp"
         android:textColor="#000"
-        android:layout_marginLeft="55dp"
+        android:layout_marginLeft="0dp"
         android:textSize="35dp"
         android:text="@string/app_name"
         android:textAlignment="center"
