--- a/ideia aplicativo jogo/projeto/app/src/main/res/layout/activity_gender.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/layout/activity_gender.xml
@@ -1,9 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:background="#fff"
     tools:context=".GenderActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/generosescolhatexto"
+        android:textSize="25dp"
+        android:layout_width="match_parent"
+        android:fontFamily="@font/looneytunes"
+        android:textAlignment="center"
+        android:textFontWeight="bolder"
+        android:layout_height="wrap_content"
+        android:text="@string/genders" />
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:scrollbars="none"
+        android:layout_marginBottom="3dp"
+        >
+
+        <TableLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp"
+            android:background="#fff"
+            android:isScrollContainer="true"
+            android:orientation="vertical"
+            android:textAlignment="center"
+            android:gravity="center_horizontal"
+        >
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageButton
+                    android:id="@+id/btMale"
+                    android:background="#fff"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/homem" />
+
+                <ImageButton
+                    android:id="@+id/btFemale"
+                    android:background="#fff"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/mulher" />
+
+
+            </TableRow>
+
+
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageButton
+                    android:id="@+id/btDoubtorPreferDontSay"
+                    android:layout_width="wrap_content"
+                    android:background="#fff"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/naosabegenero" />
+
+                <ImageButton
+                    android:id="@+id/manyoranothergenders"
+                    android:layout_width="wrap_content"
+                    android:background="#fff"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/homensemulheresoudemaisgeneros" />
+
+            </TableRow>
+
+
+        </TableLayout>
+
+
+    </ScrollView>
+
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/fechar"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_marginLeft="20dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginTop="75dp"-->
+        <!--android:clickable="true"-->
+        <!--app:srcCompat="@drawable/fechar" />-->
+
+
+</RelativeLayout>
