--- a/ideia aplicativo jogo/projeto/app/src/main/res/layout/activity_gender_korean_layout.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/layout/activity_gender_korean_layout.xml
@@ -10,9 +10,10 @@
 
     <TextView
         android:id="@+id/generosescolhatexto"
-        android:textSize="25dp"
+        android:textSize="30dp"
+        android:textColor="@color/colorPrimaryDark"
         android:layout_width="match_parent"
-        android:fontFamily="@font/looneytunes"
+        android:fontFamily="@font/koreanfont"
         android:textAlignment="center"
         android:textFontWeight="bolder"
         android:layout_height="wrap_content"
@@ -35,7 +36,7 @@
             android:orientation="vertical"
             android:textAlignment="center"
             android:gravity="center_horizontal"
-        >
+            >
 
             <TableRow
                 android:layout_width="match_parent"
@@ -85,5 +86,6 @@
 
 
     </ScrollView>
+
 
 </RelativeLayout>
