--- a/ideia aplicativo jogo/projeto/app/src/main/res/layout/content_home.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/layout/content_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff"
@@ -34,7 +35,7 @@
         android:layout_marginTop="300dp"
         android:background="@drawable/button_play"
         android:fontFamily="@font/looneytunes"
-        android:shadowColor="#000000"
+        android:shadowColor="@color/colorPrimaryDark"
         android:shadowDx="-1"
         android:shadowDy="5"
         android:shadowRadius="10"
@@ -44,6 +45,14 @@
         android:textFontWeight="bolder"
         android:textSize="30sp" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/bt_configuracao"
+        android:layout_marginTop="435dp"
+        android:layout_width="wrap_content"
+        android:layout_marginLeft="270dp"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:srcCompat="@drawable/configuracoes" />
 
 
 </RelativeLayout>
