--- a/ideia aplicativo jogo/projeto/app/src/main/res/layout/content_rules.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/layout/content_rules.xml
@@ -6,7 +6,7 @@
 
 
     <TextView
-        android:id="@+id/titleAbout"
+        android:id="@+id/titleRules"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textFontWeight="bold"
