--- a/ideia aplicativo jogo/projeto/app/src/main/res/layout/activity_male_friends.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/layout/activity_male_friends.xml
@@ -1,9 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MaleFriends">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/titlemalegenders"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textFontWeight="bold"
+        android:fontFamily="@font/looneytunes"
+        android:textSize="25dp"
+        android:textAlignment="center"
+        android:text="@string/diga_amigos" />
+
+    <!--<ScrollView-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_centerInParent="true"-->
+    <!--android:scrollbars="none"-->
+    <!--android:layout_marginBottom="3dp"-->
+    <!--&gt;-->
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:textFontWeight="bolder"
+        android:layout_marginLeft="10sp"
+        android:text="@string/titlemenunames"
+        />
+
+    <AutoCompleteTextView
+        android:id="@+id/nome_autocomplete"
+        android:layout_width="match_parent"
+        android:completionThreshold="3"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="100dp"
+        android:layout_height="wrap_content"
+        android:text="" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="180dp"
+        android:textFontWeight="bolder"
+        android:layout_marginLeft="10sp"
+        android:text="@string/titlechickenparts"
+        />
+
+    <Spinner
+        android:layout_marginTop="200dp"
+        android:id="@+id/spinner"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textFontWeight="bolder"
+        android:layout_marginTop="280dp"
+        android:layout_marginLeft="10sp"
+        android:text="@string/titlethingstodo"
+        />
+
+    <AutoCompleteTextView
+        android:id="@+id/fazer_autocomplete"
+        android:layout_width="match_parent"
+        android:completionThreshold="3"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="300dp"
+        android:layout_height="wrap_content"
+        android:text="" />
+
+    <!--</ScrollView>-->
+
+        <ImageButton
+            android:id="@+id/bt_adicionar"
+            android:layout_marginTop="400dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp"
+            android:background="@drawable/button_back"
+            android:tint="@android:color/white"
+            app:srcCompat="@drawable/mais_um" />
+
+
+
+
+
+</RelativeLayout>
