--- a/ideia aplicativo jogo/projeto/app/src/main/res/layout/fragment_home.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/layout/fragment_home.xml
@@ -10,6 +10,7 @@
     <!-- TODO: Update blank fragment layout -->
 
     <include
+        android:id="@+id/include_home_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         layout="@layout/content_home"
