--- a/ideia aplicativo jogo/projeto/app/src/main/res/layout/content_on_off.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/layout/content_on_off.xml
@@ -21,6 +21,7 @@
         android:layout_marginTop="250dp"
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal"
+        android:id="@+id/opcoesdeaudio"
         android:layout_marginLeft="15sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
