--- a/ideia aplicativo jogo/projeto/app/src/main/res/layout/friends_content.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/layout/friends_content.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff"
     android:id="@+id/conteudo_amigos"
     android:orientation="vertical">
 
@@ -22,7 +23,7 @@
         android:layout_width="match_parent"
         android:completionThreshold="3"
         android:layout_height="wrap_content"
-        android:text="AutoCompleteTextView" />
+        android:text="" />
 
     <TextView
         android:layout_width="match_parent"
