--- a/ideia aplicativo jogo/projeto/app/src/main/res/layout/fragment_crud.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/layout/fragment_crud.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     tools:context=".CrudFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Crud fragment" />
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:text="Crud fragment" />
 
-</FrameLayout>
+</RelativeLayout>
