--- a/ideia aplicativo jogo/projeto/app/src/main/res/layout/activity_result.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/layout/activity_result.xml
@@ -26,7 +26,7 @@
 
     <TextView
         android:textAlignment="center"
-        android:id="@+id/textView2"
+        android:id="@+id/resultadofinalinicial"
         android:textFontWeight="bold"
         android:fontFamily="@font/indieflower"
         android:layout_width="match_parent"
@@ -35,5 +35,41 @@
         android:textStyle="italic"
         android:textSize="22sp"
         android:text="TextView" />
+
+    <ImageButton
+        android:id="@+id/bt_salvar"
+        android:layout_marginTop="420dp"
+        android:layout_marginBottom="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:background="@drawable/button_save"
+        android:tint="@android:color/white"
+        app:srcCompat="@drawable/ic_salvar" />
+
+    <ImageButton
+        android:id="@+id/bt_compartilhar_resultado"
+        android:layout_marginTop="500dp"
+        android:layout_marginBottom="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:background="@drawable/button_back"
+        android:tint="@android:color/white"
+        app:srcCompat="@drawable/ic_menu_share" />
+
+    <ImageButton
+        android:id="@+id/bt_sair_do_jogo"
+        android:layout_marginTop="580dp"
+        android:layout_marginBottom="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:background="@drawable/button_play"
+        android:tint="@android:color/white"
+        app:srcCompat="@drawable/ic_close_vector" />
 
 </RelativeLayout>
