--- a/ideia aplicativo jogo/projeto/app/src/main/res/layout/activity_result.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/layout/activity_result.xml
@@ -7,6 +7,10 @@
     android:layout_height="match_parent"
     tools:context=".ResultActivity">
 
+    <!--<ScrollView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
+
     <TextView
         android:id="@+id/result_title"
         android:layout_width="match_parent"
@@ -60,6 +64,8 @@
         android:tint="@android:color/white"
         app:srcCompat="@drawable/ic_menu_share" />
 
+
+
     <ImageButton
         android:id="@+id/bt_sair_do_jogo"
         android:layout_marginTop="580dp"
@@ -71,5 +77,9 @@
         android:background="@drawable/button_play"
         android:tint="@android:color/white"
         app:srcCompat="@drawable/ic_close_vector" />
+
+
+
+    <!--</ScrollView>-->
 
 </RelativeLayout>
