--- a/ideia aplicativo jogo/projeto/app/src/main/res/layout/fragment_home.xml
+++ b/ideia aplicativo jogo/projeto/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/fragment_home_id"
     android:background="#fff"
     tools:context=".HomeFragment">
 
@@ -16,13 +17,5 @@
         layout="@layout/content_home"
         />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="650dp"
-        android:layout_marginLeft="300dp"
-        android:clickable="true"
-        android:src="@android:drawable/btn_star_big_on" />
 
 </FrameLayout>
